feat(observers): updated print message in update method